# subgen

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  result.json
docs/: API_ASYNC_JOBS.md  DEPLOY_K8S.md  OPERATIONS.md  README.md  docker_smoke.md  overview.md  project_structure_optimization.md
docs/knowledge/: README.md  agent.md  burn.md  config.md  pipeline.md
k8s/: 00-namespace.yaml  10-configmap.yaml  11-pvc-data.yaml  20-redis-deployment.yaml  21-redis-service.yaml  30-api-deployment.yaml  31-api-service.yaml  40-worker-deployment.yaml  kustomization.yaml
scripts/: build_kb.py  verify_quality_loop.py
src/resources/: glossary.example.json
src/subgen/: __init__.py  core_types.py
src/subgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/subgen/agent/: __init__.py  loop.py  runtime.py
src/subgen/agent/knowledge/: index.py  loader.py
src/subgen/agent/tools/: __init__.py  burn_subtitles_tool.py  burn_tool.py  envelope.py  fix_subtitles_tool.py  fix_tool.py  kb_search_tool.py  pipeline_tool.py  quality_check_subtitles_tool.py  quality_profiles.py  quality_tool.py  run_subgen_pipeline_tool.py  schemas.py  tool_names.py  tool_utils.py
src/subgen/api/: app.py  config.py  errors.py  main.py  metrics.py
src/subgen/api/middlewares/: access_log.py  error_handler.py  request_context.py
src/subgen/api/routes/: __init__.py  health.py  jobs.py  metrics.py  subtitles.py
src/subgen/api/schemas/: jobs.py  subtitles.py
src/subgen/api/services/: __init__.py  jobs_service.py  subtitles_service.py
src/subgen/api/utils/: logging_context.py  path_policy.py
src/subgen/cli/: main.py
src/subgen/core/: __init__.py  cache.py  contracts.py  pipeline.py
src/subgen/core/align/: base.py  noop.py
src/subgen/core/asr/: base.py  local_whisper.py
src/subgen/core/audio/: extract.py
src/subgen/core/export/: srt.py
src/subgen/core/jobs/: __init__.py  layout.py  spec_store.py
src/subgen/core/postprocess/: coalesce.py  dedupe.py  pipeline.py  punct_split.py  repair.py  zh_layout.py
src/subgen/core/preprocess/: __init__.py  base.py  demucs.py  noop.py  registry.py
src/subgen/core/quality/: __init__.py  fixers.py  metrics.py  pipeline.py  report.py  violations.py
src/subgen/core/refine/: glossary.py  llm_openai.py  risk.py  zh_rewrite.py  zh_rewrite_smart.py
src/subgen/core/segment/: base.py  openai_segmenter.py  rule.py
src/subgen/core/subtitle/: models.py  srt_io.py
src/subgen/core/translate/: base.py  engine_nllb.py  engine_openai.py  noop.py
src/subgen/core/video/: __init__.py  burn.py
src/subgen/service/: __init__.py  app.py  schemas.py
src/subgen/service/rq/: __init__.py  conn.py  queues.py  tasks.py  worker_identity.py  worker_main.py
src/subgen/utils/: io.py  logger.py
tests/: __init__.py  _helpers.py  test_agent_schemas.py  test_api_import_exports.py  test_jobs_service_timeout_mapping.py  test_local_whisper_compute_fallback.py  test_pipeline_api.py  test_service_api.py  test_spec_store.py  test_worker_identity.py  test_worker_run_job_generate.py
tests/agent/: test_quality_loop.py  test_quality_tool_contract.py
tests/core/postprocess/: test_pipeline.py
tests/core/preprocess/: test_demucs_preprocess.py
tests/fixtures/: bad_cps_duration.srt  bad_overlap.srt  bad_wrap.srt
tests/quality/: test_fixers.py  test_fixers_cps_duration.py  test_metrics.py  test_srt_io.py
