[project]
name = "subgen"
version = "0.1.0"
description = "High-accuracy-first subtitle generator (local-first)"
requires-python = ">=3.10"

# Core runtime deps for CLI/pipeline only
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
# Agent runtime (LangChain + OpenAI)
agent = [
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
]

# RAG / Knowledge base (Chroma + local embeddings + splitters)
rag = [
  "chromadb>=0.5.0",
  "langchain-chroma>=0.1.0",
  "langchain-community>=0.2.0",
  "langchain-text-splitters>=0.2.0",
  "sentence-transformers>=3.0.0",
  "langchain-huggingface>=0.1.0",
]

# Dev/Test tools
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

# Convenience meta-extra: install everything needed for agent + rag
agent_rag = [
  "subgen[agent,rag]",
]

# Convenience meta-extra: install everything needed for agent + rag + dev
all = [
  "subgen[agent,rag,dev]",
]

[project.scripts]
subgen = "subgen.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
